# khadim

./: .dockerignore  .env.example  .gitignore  .impeccable.md  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  README.md  auth.json  docker-compose.yml  environment.khadim-bench.yml  nixpacks.json  nixpacks.toml  package.json  pnpm-lock.yaml  server.ts  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.vite.tsbuildinfo  vite.config.ts
apps/desktop/plugins/pomodoro/: Cargo.toml  build.sh  package.json  plugin.toml  plugin.wasm  tsconfig.json  ui.js  vite.config.ts
apps/desktop/plugins/pomodoro/src/: AddTaskModal.tsx  PomodoroContent.tsx  PomodoroSidebar.tsx  api.ts  hooks.ts  index.tsx  lib.rs  types.ts
apps/desktop/src-tauri/: Cargo.toml  create-cert.ps1  create-dev-cert.ps1  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: backend.rs  claude_code.rs  db.rs  error.rs  file_index.rs  git.rs  github.rs  health.rs  lib.rs  lsp.rs  main.rs  opencode.rs  process.rs  run_lifecycle.rs  sandbox.rs  syntax.rs  terminal.rs  workspace_context.rs
apps/desktop/src-tauri/src/agent_runner/: docker.rs  helpers.rs  local.rs  mod.rs
apps/desktop/src-tauri/src/automation/: approvals.rs  artifacts.rs  budgets.rs  health.rs  mod.rs  queue.rs  run_service.rs  scheduler.rs
apps/desktop/src-tauri/src/commands/: automation.rs  claude_code.rs  conversation.rs  editor.rs  environment.rs  file_index.rs  git.rs  integrations.rs  khadim.rs  lsp.rs  mod.rs  opencode.rs  plugins.rs  process.rs  rpa.rs  runtime.rs  settings.rs  skills.rs  syntax.rs  terminal.rs  workspace.rs
apps/desktop/src-tauri/src/db/: context.rs  entities.rs
apps/desktop/src-tauri/src/db/repositories/: automation.rs  chat.rs  integration.rs  mod.rs  run.rs  settings.rs  workspace.rs
apps/desktop/src-tauri/src/integrations/: auth.rs  mod.rs  tool_bridge.rs
apps/desktop/src-tauri/src/integrations/providers/: airtable.rs  discord.rs  github_ext.rs  gmail.rs  google_calendar.rs  google_drive.rs  google_sheets.rs  http_generic.rs  hubspot.rs  jira.rs  linear.rs  mod.rs  notion.rs  onedrive.rs  outlook.rs  postgres.rs  rss.rs  sendgrid.rs  shopify.rs  slack.rs  stripe.rs  telegram.rs  todoist.rs  twilio.rs  webhook.rs
apps/desktop/src-tauri/src/khadim_agent/: mod.rs  modes.rs  orchestrator.rs  session.rs  subagent.rs  types.rs
apps/desktop/src-tauri/src/khadim_ai/: api_registry.rs  client.rs  env_api_keys.rs  event_stream.rs  mod.rs  model_settings.rs  models.rs  oauth.rs  streaming.rs  types.rs
apps/desktop/src-tauri/src/khadim_ai/providers/: amazon_bedrock.rs  anthropic.rs  azure_openai_responses.rs  google.rs  google_vertex.rs  mistral.rs  mod.rs  openai_codex_responses.rs  openai_completions.rs  openai_responses.rs  request_headers.rs  transform_messages.rs
apps/desktop/src-tauri/src/khadim_code/: mod.rs  prompt.rs  runtime.rs  tools.rs
apps/desktop/src-tauri/src/plugins/: bridge.rs  manager.rs  manifest.rs  mod.rs  wasm_host.rs
apps/desktop/src-tauri/src/skills/: mod.rs  scanner.rs  tool.rs
apps/desktop/src-tauri/tests/: plugin_load.rs
apps/desktop/src-tauri/wit/: khadim-plugin.wit
apps/firecracker-sandbox/: Cargo.toml  README.md  package.json
apps/firecracker-sandbox/scripts/: run-cargo.ts
apps/firecracker-sandbox/src/: api.rs  app_state.rs  config.rs  error.rs  main.rs  models.rs  runtime.rs
apps/khadim-cli/: BROWSER_SEARCH_PLAN.md  Cargo.toml  ISSUES.md  README.md  package.json
apps/khadim-cli/bench/: khadim_harbor_agent.py  terminal_bench_agent.py
apps/khadim-cli/bench/.terminal-bench-runs/2026-04-16__22-28-42/: results.json  run_metadata.json
apps/khadim-cli/bench/.terminal-bench-runs/2026-04-16__22-30-05/: run_metadata.json
apps/khadim-cli/bench/.terminal-bench-runs/2026-04-16__22-30-40/: results.json  run_metadata.json
apps/khadim-cli/bench/.terminal-bench-runs/2026-04-17__10-34-36/: results.json  run_metadata.json
apps/khadim-cli/bench/.terminal-bench-runs/2026-04-17__10-41-01/: run_metadata.json
apps/khadim-cli/bench/jobs/2026-04-17__16-34-25/: config.json  result.json
apps/khadim-cli/bench/jobs/2026-04-17__16-34-25/circuit-fibsqrt__6f2MkaA/: config.json  exception.txt
apps/khadim-cli/bench/jobs/2026-04-17__16-34-25/make-mips-interpreter__zoZEBxT/: config.json  exception.txt  result.json
apps/khadim-cli/bench/jobs/2026-04-17__16-56-35/: config.json  result.json
apps/khadim-cli/bench/jobs/2026-04-17__16-56-35/build-pov-ray__JG8F3H8/: config.json  (+1 more)
apps/khadim-cli/scripts/: build-debian.sh  build_dist_bin.py  install.sh  stage_npm_package.py
apps/khadim-cli/src/: app.rs  args.rs  catalog.ts  index.ts  main.rs  resolve-binary.ts  run-agent.ts  splash.rs  themes.rs
apps/khadim-cli/src/domain/: commands.rs  events.rs  login.rs  mod.rs  models.rs  question.rs  session.rs  settings.rs  transcript.rs
apps/khadim-cli/src/infrastructure/: browser.rs  mod.rs  terminal.rs
apps/khadim-cli/src/services/: agent_service.rs  app_service.rs  catalog_service.rs  export_service.rs  history_service.rs  mod.rs  oauth_service.rs  session_service.rs  settings_service.rs
apps/khadim-cli/src/tools/: mod.rs  question_tool.rs
apps/khadim-cli/src/ui/: diff.rs  helpers.rs  highlight.rs  markdown.rs  markdown_demo.md  mod.rs  paste.rs  table.rs  theme.rs
crates/khadim-ai-core/: Cargo.toml  README.md
crates/khadim-ai-core/src/: api_registry.rs  client.rs  env_api_keys.rs  error.rs  lib.rs  models.rs  oauth.rs  pricing.rs  tools.rs  types.rs
crates/khadim-ai-core/src/providers/: amazon_bedrock.rs  anthropic.rs  azure_openai_responses.rs  google.rs  google_vertex.rs  mistral.rs  mod.rs  openai_codex_responses.rs  openai_completions.rs  openai_responses.rs  request_headers.rs  transform_messages.rs  usage.rs
crates/khadim-coding-agent/: Cargo.toml  README.md
crates/khadim-coding-agent/src/: agent.rs  events.rs  helpers.rs  lib.rs  prompt.rs  runtime.rs  tools.rs
crates/khadim-coding-agent/src/agent/: goal_tracker.rs  mode_planner.rs  modes.rs  orchestrator.rs  session.rs  types.rs
(+586 files in other folders)
