[package]
name = "khadim-firecracker-sandbox"
version = "0.1.0"
edition = "2021"
description = "Firecracker sandbox control plane for Khadim web"
license = "MIT"

[dependencies]
async-trait = "0.1"
axum = { version = "0.7", features = ["macros"] }
chrono = { version = "0.4", features = ["serde"] }
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
