[package]
name = "khadim-cli"
version = "0.2.7"
edition = "2021"
description = "Khadim CLI coding agent"

[dependencies]
async-trait = "0.1"
arboard = "3"
crossterm = { version = "0.28", features = ["event-stream"] }
dirs = "6"
env_logger = "0.11"
image = "0.25"
openssl = { version = "0.10", features = ["vendored"] }
khadim-ai-core = { version = "0.1.0", path = "../../crates/khadim-ai-core" }
khadim-coding-agent = { version = "0.1.0", path = "../../crates/khadim-coding-agent" }
pulldown-cmark = { version = "0.13.3", default-features = false }
ratatui = "0.30"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syntect = { version = "5", default-features = false, features = ["default-fancy"] }
tokio = { version = "1", features = ["full"] }
unicode-width = "0.2"
textwrap = { version = "0.16", default-features = false, features = ["unicode-width", "smawk"] }
