[package]
name = "khadim-ai-core"
version = "0.1.0"
edition = "2021"
description = "Shared Khadim model, provider, and streaming primitives"
license = "AGPL-3.0-only"
readme = "README.md"
keywords = ["khadim", "llm", "agents", "ai"]
categories = ["api-bindings", "development-tools"]

[dependencies]
async-trait = "0.1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
futures-util = "0.3"
http = "1"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
rand = "0.10"
reqwest = { version = "0.12", features = ["json", "stream", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.29", features = ["native-tls"] }
url = "2"
uuid = { version = "1", features = ["v4"] }
sea-orm = { version = "1.1", features = ["sqlx-sqlite", "runtime-tokio-rustls"], optional = true }

[features]
default = []
desktop = ["sea-orm"]

[lib]
crate-type = ["lib"]
