[package]
name = "khadim-coding-agent"
version = "0.1.0"
edition = "2021"
description = "Shared coding-agent runtime and tool loop for Khadim"
license = "AGPL-3.0-only"
readme = "README.md"
keywords = ["khadim", "agent", "cli", "automation"]
categories = ["development-tools", "command-line-interface"]

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
html-escape = "0.2"
khadim-ai-core = { version = "0.1.0", path = "../khadim-ai-core" }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
urlencoding = "2"
uuid = { version = "1", features = ["v4"] }

[lib]
crate-type = ["lib"]
