[package]
name = "khadim-desktop"
version = "0.1.0"
description = "Khadim desktop app"
authors = ["Khadim"]
edition = "2021"

[lib]
name = "khadim_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.6", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.8.5", features = [] }
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream", "blocking"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
async-trait = "0.1"
thiserror = "1"
log = "0.4"
env_logger = "0.11"
dirs = "6"
rand = "0.8"
base64 = "0.22"
futures-util = "0.3"
tokio-util = { version = "0.7", features = ["io"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
http = "1"
sha2 = "0.10"
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native"] }

wasmtime = { version = "29", features = ["component-model"] }
wasmtime-wasi = "29"
toml = "0.8"
url = "2"
notify = { version = "7", default-features = false, features = ["macos_kqueue"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
