[package]
name = "khadim-desktop"
version = "0.1.0"
description = "Khadim desktop app"
authors = ["Khadim"]
edition = "2021"

[lib]
name = "khadim_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.6", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.8.5", features = [] }
sea-orm = { version = "1.1", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream", "blocking"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
async-trait = "0.1"
thiserror = "1"
log = "0.4"
env_logger = "0.11"
dirs = "6"
rand = "0.10"
base64 = "0.22"
futures-util = "0.3"
tokio-util = { version = "0.7", features = ["io"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
http = "1"
sha2 = "0.10"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }

wasmtime = { version = "43", features = ["component-model"] }
wasmtime-wasi = "43"
toml = "0.8"
url = "2"
urlencoding = "2"
opener = "0.7"
notify = { version = "7", default-features = false, features = ["macos_kqueue"] }
portable-pty = "0.8"
ignore = "0.4"
which = "7"
bollard = "0.18"
tokio-cron-scheduler = "0.13"
khadim-ai-core = { version = "0.1.0", path = "../../../crates/khadim-ai-core", features = ["desktop"] }
khadim-coding-agent = { version = "0.1.0", path = "../../../crates/khadim-coding-agent" }

# Tree-sitter syntax highlighting (native speed, same approach as Zed)
tree-sitter = "0.25"
tree-sitter-highlight = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-json = "0.24"
tree-sitter-go = "0.23"
tree-sitter-python = "0.23"
tree-sitter-html = "0.23"
tree-sitter-css = "0.23"
tree-sitter-bash = "0.23"
tree-sitter-c = "0.23"
tree-sitter-cpp = "0.23"
tree-sitter-toml-ng = "0.7"
tree-sitter-yaml = "0.7"
tree-sitter-zig = "1"
tree-sitter-md = "0.5"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
